--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -6,6 +6,7 @@
   <h2>Todo List</h2>
   <div class="container">
     <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
+      
       {% csrf_token %}  <!-- Include the CSRF token for security -->
       <div class="form-row">
         <div class="col-md-4 mb-3">
@@ -18,6 +19,7 @@
           <button type="submit" class="btn btn-primary">Add Task</button> <!-- Add task button for the todolist -->
 
         </div>
+        <h3>Chores Todo</h3>
       </div>
     </form>
 
@@ -39,8 +41,11 @@
           </div>
         </div>
       </li>
+
       {% endfor %}
     </ul>
+    </br>
+    <h3>Completed Chores</h3>
 
     {% for completed_by, todos in completed_todos.items %}
     <div class="mt-4">
