--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}  <!-- Load the static template tag to use static files -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Link to Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8mTVTDu4u9pPg2m0h9XWGJ6h8f+12vlE5f8Xv2+3/BzV2OwUSm/OBhF+9rXn9mdz" crossorigin="anonymous">
